# src/generated/swagger/statev1/models/generic_error.go
@@ -1,11 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-// GenericError generic error
-//
-// swagger:model genericError
-type GenericError interface{}
